# Engine-sim-mac

./: .gitignore  Agents.md  CMakeLists.txt  README.md  TODO.md  build.sh
.agents/: DOCUMENTATIONS.md  MEMORY.md
art/: appicon.icns
art/appicon.icon/: icon.json
dependencies/discord/: CMakeLists.txt  Discord.cpp
dependencies/submodules/: CMakeLists.txt
include/: audio_buffer.h  combustion_chamber.h  cylinder_head.h  debug_trace.h  delay_filter.h  gas_system.h  jitter_filter.h  load_simulation_cluster.h  low_pass_filter.h  piston_engine_simulator.h  ring_buffer.h  ui_element.h  units.h
scripting/include/: channel_types.h  compiler.h  cylinder_head_node.h  engine_node.h  object_reference_node.h
scripting/src/: compiler.cpp
src/: audio_buffer.cpp  combustion_chamber.cpp  convolution_filter.cpp  cylinder_head.cpp  debug_trace.cpp  derivative_filter.cpp  engine_sim_application.cpp  feedback_comb_filter.cpp  fuel_cluster.cpp  function.cpp  gauge.cpp  gaussian_filter.cpp  jitter_filter.cpp  load_simulation_cluster.cpp  main.cpp  mixer_cluster.cpp  oscilloscope.cpp  oscilloscope_cluster.cpp  performance_cluster.cpp  right_gauge_cluster.cpp  simulator.cpp  synthesizer.cpp  transmission.cpp  ui_element.cpp
tools/: backtrace.sh  build.sh  compile_macos_icon_assets.sh  trace_replay_parser.py  translate_shaders_to_msl.sh
